--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 //thats the default applicable styles that we want inside our app
 body {
   margin: 0;
+  padding: 20px 40px;
   font-family: "Open Sans Condensed", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
